# gdptools-examples

./: .flake8  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
Daymet/: Generate_weights.py  run_dm_ak_1980.py
NLDAS/: nldas.ipynb
PDSI/: MIke_PDSI_Demo.ipynb  Mike_pdsi_2.py  Mike_pdsi_3.py
